// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Root > renders 1`] = `
<DocumentFragment>
  <nav
    class="bg-body-tertiary navbar navbar-expand navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="#home"
      >
        Upload Service
      </a>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="me-auto my-2 my-lg-0 navbar-nav"
      >
        <a
          class="nav-link"
          href="/"
        >
          Home
        </a>
        <a
          class="nav-link"
          href="/upload"
        >
          Upload
        </a>
        <a
          class="nav-link"
          href="/edit-filters"
        >
          Edit Metadata Settings
        </a>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <h1>
              Files
            </h1>
            <table
              class="table"
            >
              <thead>
                <tr>
                  <th>
                    <span>
                      Name
                    </span>
                  </th>
                  <th>
                    Updated
                  </th>
                  <th>
                    Created
                  </th>
                  <th>
                    Size
                  </th>
                </tr>
              </thead>
              <tbody />
              <tfoot>
                <tr>
                  <th>
                    name
                  </th>
                  <th>
                    updated
                  </th>
                  <th>
                    created
                  </th>
                  <th>
                    size
                  </th>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root renders 1`] = `
<DocumentFragment>
  <nav
    class="bg-body-tertiary navbar navbar-expand navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="#home"
      >
        Upload
      </a>
      <button
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="me-auto my-2 my-lg-0 navbar-nav"
      >
        <a
          class="nav-link"
          href="/"
        >
          Home
        </a>
        <a
          class="nav-link"
          href="/upload"
        >
          Upload
        </a>
        <a
          class="nav-link"
          href="/edit-filters"
        >
          Edit Metadata Settings
        </a>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col-6"
      >
        <h1>
          Upload UI
        </h1>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <h1>
              Files
            </h1>
            <table
              class="table"
            >
              <thead>
                <tr>
                  <th>
                    <span>
                      Name
                    </span>
                  </th>
                  <th>
                    Updated
                  </th>
                  <th>
                    Created
                  </th>
                  <th>
                    Size
                  </th>
                </tr>
              </thead>
              <tbody />
              <tfoot>
                <tr>
                  <th>
                    name
                  </th>
                  <th>
                    updated
                  </th>
                  <th>
                    created
                  </th>
                  <th>
                    size
                  </th>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
